Refs #12912 Added IE6 hack to prevent collapsing list items.
git-svn-id: http://svn.dojotoolkit.org/src/dojox/trunk@25039 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/mobile/themes/blackberry/ListItem-compat.css
+++ b/mobile/themes/blackberry/ListItem-compat.css
@@ -18,3 +18,6 @@
 .mblItemSelected .mblArrow {
 	background-image: url(compat/white-arrow.png);
 }
+*html .mblListItemTextBox { /* IE6 hack */
+	height: 100%;
+}
