--- a/mobile/themes/custom/ListItem-compat.css
+++ b/mobile/themes/custom/ListItem-compat.css
@@ -8,3 +8,6 @@
 .mblItemSelected {
 	background-image: url(compat/ui-widget-bg.png);
 }
+*html .mblListItemTextBox { /* IE6 hack */
+	height: 100%;
+}
