--- a/mobile/themes/iphone/ListItem-compat.css
+++ b/mobile/themes/iphone/ListItem-compat.css
@@ -19,3 +19,6 @@
 .mblItemSelected .mblArrow {
 	background-image: url(compat/white-arrow.png);
 }
+*html .mblListItemTextBox { /* IE6 hack */
+	height: 100%;
+}
